tests/snapshots/codegen_snapshot_tests__function_references.snap
---
source: tests/codegen_snapshot_tests.rs
expression: normalize_projected_symbols_for_readable_codegen(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_stdlib::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
fn double(x: i64) -> i64 {
    return x * 2;
}
fn square(x: i64) -> i64 {
    return x * x;
}
fn apply_transform(func: fn(i64) -> i64, value: i64) -> i64 {
    return func(value);
}
fn test_function_references() -> (i64, i64) {
    let doubled = apply_transform(double, 5);
    let squared = apply_transform(square, 3);
    return (doubled, squared);
}
fn map_list(items: Vec<i64>, transformer: fn(i64) -> i64) -> Vec<i64> {
    let mut result: Vec<i64> = Vec::<i64>::new();
    for item in items.iter().copied() {
        let _ = result.push(transformer(item));
    }
    return result.clone();
}
fn test_callable_syntax() -> Vec<i64> {
    let nums = vec![1, 2, 3];
    let mut doubled_arrows = map_list(nums.clone(), double.clone());
    let doubled_callable = map_list(nums, double);
    for item in doubled_callable.iter().copied() {
        let _ = doubled_arrows.push(item);
    }
    return doubled_arrows.clone();
}
fn apply_binary(func: fn(i64, i64) -> i64, a: i64, b: i64) -> i64 {
    return func(a, b);
}
fn add(x: i64, y: i64) -> i64 {
    return x + y;
}
fn multiply(x: i64, y: i64) -> i64 {
    return x * y;
}
fn test_multi_param() -> (i64, i64) {
    let sum_result = apply_binary(add, 3, 4);
    let product_result = apply_binary(multiply, 3, 4);
    return (sum_result, product_result);
}
fn constant() -> i64 {
    return 42;
}
fn invoke_zero_param(func: fn() -> i64) -> i64 {
    return func();
}
fn test_zero_param() -> i64 {
    return invoke_zero_param(constant);
}
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let _result1 = test_function_references();
    let _result2 = test_multi_param();
    let _zero_param_result = test_zero_param();
    let _callable_result = test_callable_syntax();
}
