tests/snapshots/codegen_snapshot_tests__functions.snap
---
source: tests/codegen_snapshot_tests.rs
expression: normalize_projected_symbols_for_readable_codegen(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_std_core::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
fn greet() -> String {
    return "Hello, World!".to_string();
}
fn add(a: i64, b: i64) -> i64 {
    return a + b;
}
fn factorial(n: i64) -> i64 {
    if n <= 1 {
        return 1;
    }
    return n * factorial(n - 1);
}
fn fibonacci(n: i64) -> i64 {
    if n <= 1 {
        return n;
    }
    return fibonacci(n - 1) + fibonacci(n - 2);
}
fn double(x: i64) -> i64 {
    return x * 2;
}
fn quadruple(x: i64) -> i64 {
    return double(double(x));
}
fn double_values(numbers: &mut Vec<i64>) {
    let mut idx: i64 = 0;
    *incan_std_core::collections::list_get_mut(numbers, (idx) as i64) = *incan_std_core::collections::list_get(
        &numbers,
        (idx) as i64,
    ) * 2;
    idx = 1;
    *incan_std_core::collections::list_get_mut(numbers, (idx) as i64) = *incan_std_core::collections::list_get(
        &numbers,
        (idx) as i64,
    ) * 2;
}
fn find_max(numbers: Vec<i64>) -> i64 {
    let mut max_val: i64 = *incan_std_core::collections::list_get(&numbers, (0) as i64);
    for num in numbers.iter().copied() {
        if num > max_val {
            max_val = num;
        }
    }
    return max_val;
}
fn classify_number(x: i64) -> String {
    if x < 0 {
        return "negative".to_string();
    }
    if x == 0 {
        return "zero".to_string();
    }
    if x < 10 {
        return "small positive".to_string();
    }
    return "large positive".to_string();
}
fn print_greeting(name: String) {
    let _ = println!(
        "{}", { let __parts : [& str; 2usize] = ["Hello, ", "!"]; let __args : Vec <
        String > = vec![format!("{}", name)]; incan_std_core::strings::fstring(& __parts,
        & __args) }
    );
}
fn get_coordinates() -> (i64, i64) {
    return (10, 20);
}
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let greeting: String = greet();
    let _ = println!("{}", greeting);
    let sum: i64 = add(5, 3);
    let _ = println!(
        "{}", { let __parts : [& str; 2usize] = ["5 + 3 = ", ""]; let __args : Vec <
        String > = vec![format!("{}", sum)]; incan_std_core::strings::fstring(& __parts,
        & __args) }
    );
    let result: i64 = quadruple(5);
    let _ = println!(
        "{}", { let __parts : [& str; 2usize] = ["quadruple(5) = ", ""]; let __args : Vec
        < String > = vec![format!("{}", result)]; incan_std_core::strings::fstring(&
        __parts, & __args) }
    );
    let fact: i64 = factorial(5);
    let _ = println!(
        "{}", { let __parts : [& str; 2usize] = ["factorial(5) = ", ""]; let __args : Vec
        < String > = vec![format!("{}", fact)]; incan_std_core::strings::fstring(&
        __parts, & __args) }
    );
    let fib: i64 = fibonacci(7);
    let _ = println!(
        "{}", { let __parts : [& str; 2usize] = ["fibonacci(7) = ", ""]; let __args : Vec
        < String > = vec![format!("{}", fib)]; incan_std_core::strings::fstring(&
        __parts, & __args) }
    );
    let test_nums: Vec<i64> = vec![1, 5, 3, 9, 2];
    let max_num: i64 = find_max(test_nums);
    let _ = println!(
        "{}", { let __parts : [& str; 2usize] = ["max = ", ""]; let __args : Vec < String
        > = vec![format!("{}", max_num)]; incan_std_core::strings::fstring(& __parts, &
        __args) }
    );
    let mut nums: Vec<i64> = vec![5, 10, 15];
    let _ = double_values(&mut nums);
    let _ = println!("{}", "List incremented");
    let category: String = classify_number(-5);
    let _ = println!("{}", category);
    let mut alice_name: String = "Alice".to_string();
    let _ = print_greeting(alice_name.to_string());
    let _coords: (i64, i64) = get_coordinates();
    let _ = println!("{}", "Coordinates retrieved");
}
