tests/snapshots/codegen_snapshot_tests__imported_stdlib_mut_param.snap
---
source: tests/codegen_snapshot_tests.rs
assertion_line: 3326
expression: rust_code
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_stdlib::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
pub use crate::__incan_std::datetime::civil::naive::ordinal_key_append_byte;
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let mut out: Vec<u8> = vec![];
    crate::__incan_std::datetime::civil::naive::ordinal_key_append_byte(&mut out, 7);
    if (::std::convert::identity(out.len() as i64)) != (1) {
        panic!("AssertionError: left != right");
    }
}
