tests/snapshots/codegen_snapshot_tests__imported_stdlib_value_fragment.snap
---
source: tests/codegen_snapshot_tests.rs
expression: normalize_projected_symbols_for_readable_codegen(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_stdlib::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
pub use crate::__incan_std::datetime::civil::naive::ordinal_key_byte;
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let out = crate::__incan_std::datetime::civil::naive::ordinal_key_byte(7);
    let _ = if ::std::convert::identity(out.len() as i64) != 1 {
        panic!("AssertionError: left != right");
    };
}
