tests/snapshots/codegen_snapshot_tests__issue1116_builtin_len_shadowing.snap
---
source: tests/codegen_snapshot_tests.rs
expression: normalize_projected_symbols_for_readable_codegen(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_std_core::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
fn len(value: i64) -> i64 {
    let _ = "Return a source-defined length-like value.";
    return value + 1;
}
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let _ = "Exercise both the shadowed and explicit builtin calls.";
    let _ = println!("{}", len(4));
    let _ = println!("{}", ::std::convert::identity(vec![10, 20, 30] .len() as i64));
}
