tests/snapshots/codegen_snapshot_tests__issue1491_rust_struct_variant_pattern.snap
---
source: tests/codegen_snapshot_tests.rs
expression: normalize_projected_symbols_for_readable_codegen(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_std_core::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
use ::cfg_expr::Predicate;
pub fn key_value_of(predicate: &Predicate) -> Option<String> {
    let _ = match predicate {
        Predicate::KeyValue { key: key, val: value } => {
            return Some(
                incan_std_core::strings::str_concat(
                    &incan_std_core::strings::str_concat(&key.to_string(), &"="),
                    &value.to_string(),
                ),
            );
        }
        _ => {
            return None::<_>;
        }
    };
}
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let _ = ();
}
